Clarify use of CliContext.fhirVersion
We deprecate `matchbox.fhir.context.fhirVersion` in favor of `hapi.fhir.fhir_version`