@@ -1,28 +1,5 @@
 package ch.ahdis.matchbox.providers;
 
-import java.nio.charset.StandardCharsets;
-import java.util.*;
-import java.util.stream.Collectors;
-
-import ch.ahdis.matchbox.CliContext;
-import ch.ahdis.matchbox.util.MatchboxEngineSupport;
-import ch.ahdis.matchbox.util.MatchboxServerUtils;
-import jakarta.servlet.http.HttpServletRequest;
-
-import ch.ahdis.matchbox.engine.exception.MatchboxUnsupportedFhirVersionException;
-import org.hl7.fhir.convertors.factory.VersionConvertorFactory_40_50;
-import org.hl7.fhir.convertors.factory.VersionConvertorFactory_43_50;
-import org.hl7.fhir.instance.model.api.IBaseResource;
-import org.hl7.fhir.instance.model.api.IDomainResource;
-import org.hl7.fhir.instance.model.api.IIdType;
-import org.hl7.fhir.r4.model.*;
-import org.quartz.DisallowConcurrentExecution;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Slice;
-import org.springframework.transaction.PlatformTransactionManager;
-import org.springframework.transaction.support.TransactionTemplate;
-
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.i18n.Msg;
 import ca.uhn.fhir.jpa.api.dao.DaoRegistry;
@@ -32,30 +9,40 @@ import ca.uhn.fhir.jpa.model.entity.NpmPackageVersionResourceEntity;
 import ca.uhn.fhir.jpa.starter.AppProperties;
 import ca.uhn.fhir.model.api.Include;
 import ca.uhn.fhir.model.api.annotation.Description;
-import ca.uhn.fhir.rest.annotation.ConditionalUrlParam;
-import ca.uhn.fhir.rest.annotation.Create;
-import ca.uhn.fhir.rest.annotation.IdParam;
-import ca.uhn.fhir.rest.annotation.IncludeParam;
-import ca.uhn.fhir.rest.annotation.OptionalParam;
-import ca.uhn.fhir.rest.annotation.RawParam;
-import ca.uhn.fhir.rest.annotation.Read;
-import ca.uhn.fhir.rest.annotation.ResourceParam;
-import ca.uhn.fhir.rest.annotation.Search;
-import ca.uhn.fhir.rest.annotation.Sort;
-import ca.uhn.fhir.rest.annotation.Update;
-import ca.uhn.fhir.rest.api.SearchContainedModeEnum;
-import ca.uhn.fhir.rest.api.SearchTotalModeEnum;
-import ca.uhn.fhir.rest.api.SortSpec;
-import ca.uhn.fhir.rest.api.SummaryEnum;
+import ca.uhn.fhir.rest.annotation.*;
+import ca.uhn.fhir.rest.api.*;
+import ca.uhn.fhir.rest.api.server.IBundleProvider;
 import ca.uhn.fhir.rest.api.server.RequestDetails;
 import ca.uhn.fhir.rest.param.TokenAndListParam;
 import ca.uhn.fhir.rest.param.UriAndListParam;
+import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.SimpleBundleProvider;
 import ca.uhn.fhir.rest.server.exceptions.MethodNotAllowedException;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
+import ch.ahdis.matchbox.CliContext;
 import ch.ahdis.matchbox.engine.MatchboxEngine;
-import ca.uhn.fhir.rest.api.MethodOutcome;
-import ca.uhn.fhir.rest.server.IResourceProvider;
+import ch.ahdis.matchbox.engine.exception.MatchboxUnsupportedFhirVersionException;
+import ch.ahdis.matchbox.util.MatchboxEngineSupport;
+import ch.ahdis.matchbox.util.MatchboxServerUtils;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import org.hl7.fhir.convertors.factory.VersionConvertorFactory_40_50;
+import org.hl7.fhir.convertors.factory.VersionConvertorFactory_43_50;
+import org.hl7.fhir.instance.model.api.IBaseResource;
+import org.hl7.fhir.instance.model.api.IDomainResource;
+import org.hl7.fhir.instance.model.api.IIdType;
+import org.hl7.fhir.r4.model.MetadataResource;
+import org.quartz.DisallowConcurrentExecution;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Slice;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.support.TransactionTemplate;
+
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static ch.ahdis.matchbox.util.MatchboxServerUtils.addExtension;
 
@@ -102,85 +89,69 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 	}
 
 	@Search(allowUnknownParams = true)
-	public ca.uhn.fhir.rest.api.server.IBundleProvider search(jakarta.servlet.http.HttpServletRequest theServletRequest,
-			jakarta.servlet.http.HttpServletResponse theServletResponse,
-
-			ca.uhn.fhir.rest.api.server.RequestDetails theRequestDetails,
-
-			@Description(shortDefinition = "The ID of the resource") @OptionalParam(name = "_id") TokenAndListParam the_id,
-
-			@Description(shortDefinition = "The uri that identifies the conformance resource") @OptionalParam(name = "url") UriAndListParam theUrl,
-
-			@Description(shortDefinition = "The business version of the conformance resource") @OptionalParam(name = "version") TokenAndListParam theCanonicalVersion,
-
-			@RawParam Map<String, List<String>> theAdditionalRawParams,
-
-			@IncludeParam Set<Include> theIncludes,
-
-			@IncludeParam(reverse = true) Set<Include> theRevIncludes,
-
-			@Sort SortSpec theSort,
-
-			@ca.uhn.fhir.rest.annotation.Count Integer theCount,
-
-			@ca.uhn.fhir.rest.annotation.Offset Integer theOffset,
-
-			SummaryEnum theSummaryMode,
-
-			SearchTotalModeEnum theSearchTotalMode,
-
-			SearchContainedModeEnum theSearchContainedMode
-
-	) {
+	public IBundleProvider search(HttpServletRequest theServletRequest,
+											HttpServletResponse theServletResponse,
+											RequestDetails theRequestDetails,
+											@Description(shortDefinition = "The ID of the resource") @OptionalParam(name = "_id") TokenAndListParam the_id,
+											@Description(shortDefinition = "The uri that identifies the conformance resource") @OptionalParam(name = "url") UriAndListParam theUrl,
+											@Description(shortDefinition = "The business version of the conformance resource") @OptionalParam(name = "version") TokenAndListParam theCanonicalVersion,
+											@RawParam Map<String, List<String>> theAdditionalRawParams,
+											@IncludeParam Set<Include> theIncludes,
+											@IncludeParam(reverse = true) Set<Include> theRevIncludes,
+											@Sort SortSpec theSort,
+											@ca.uhn.fhir.rest.annotation.Count Integer theCount,
+											@ca.uhn.fhir.rest.annotation.Offset Integer theOffset,
+											SummaryEnum theSummaryMode,
+											SearchTotalModeEnum theSearchTotalMode,
+											SearchContainedModeEnum theSearchContainedMode
+	) throws IOException {
+		final var httpWrapper = this.matchboxEngineSupport.createWrapper(theServletRequest, theServletResponse);
 		if ("ImplementationGuide".equals(resourceType)) {
-			try {
 				return new TransactionTemplate(myTxManager).execute(tx -> {
-					final int offset = (theOffset == null ? 0 : theOffset.intValue());
-					final int count = (theCount == null ? 10000 : theCount.intValue());
+					final int offset = (theOffset == null ? 0 : theOffset);
+					final int count = (theCount == null ? 10000 : theCount);
 					Slice<NpmPackageVersionResourceEntity> outcome = null;
 
 					if (the_id != null) {
-						String pid = the_id.getValuesAsQueryTokens().get(0).getValuesAsQueryTokens().get(0).getValue();
+						String pid = the_id.getValuesAsQueryTokens().getFirst().getValuesAsQueryTokens().getFirst().getValue();
 						outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
-								resourceType,
-								Long.parseLong(pid));
+																										 resourceType,
+																										 Long.parseLong(pid));
 					} else {
 						if (theUrl != null) {
-							String url = theUrl.getValuesAsQueryTokens().get(0).getValuesAsQueryTokens().get(0).getValue();
+							String url = theUrl.getValuesAsQueryTokens().getFirst().getValuesAsQueryTokens().getFirst().getValue();
 							if (theCanonicalVersion != null) {
-								String canonicalVersion = theCanonicalVersion.getValuesAsQueryTokens().get(0)
-										.getValuesAsQueryTokens().get(0).getValue();
+								String canonicalVersion = theCanonicalVersion.getValuesAsQueryTokens().getFirst()
+									.getValuesAsQueryTokens().getFirst().getValue();
 								outcome = myPackageVersionResourceDao.findByResourceTypeByCanonicalByCanonicalVersion(
-										PageRequest.of(offset, count), resourceType, url, canonicalVersion);
+									PageRequest.of(offset, count), resourceType, url, canonicalVersion);
 							} else {
 								outcome = myPackageVersionResourceDao
-										.findByResourceTypeByCanoncial(PageRequest.of(offset, count), resourceType, url);
+									.findByResourceTypeByCanoncial(PageRequest.of(offset, count), resourceType, url);
 							}
 						} else {
 							outcome = myPackageVersionResourceDao.findByResourceType(PageRequest.of(offset, count),
-									resourceType);
+																										resourceType);
 						}
 					}
 
 					SimpleBundleProvider bundleProvider = new SimpleBundleProvider(
-							outcome.stream().map(t -> loadPackageEntityAdjustId(t)).collect(Collectors.toList()));
+						outcome.stream().map(this::loadPackageEntityAdjustId).toList());
 					bundleProvider.setCurrentPageOffset(offset);
 					bundleProvider.setCurrentPageSize(count);
 					return bundleProvider;
 				});
-			} finally {
-				}
-		} 
-		
-		if (cliContext.getOnlyOneEngine()){
-			List<org.hl7.fhir.r5.model.Resource> resources = new ArrayList<org.hl7.fhir.r5.model.Resource>();
+		}
+
+		if (cliContext.getOnlyOneEngine()) {
+			List<org.hl7.fhir.r5.model.Resource> resources = new ArrayList<>();
 			MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(null, cliContext,
-					false, false);
+																											false, false);
 			if (matchboxEngine != null) {
 
 				if (theUrl != null) {
 					String url = theUrl.getValuesAsQueryTokens().get(0).getValuesAsQueryTokens().get(0).getValue();
-					R5 r = matchboxEngine.getContext().fetchResource(classR5,url);
+					R5 r = matchboxEngine.getContext().fetchResource(classR5, url);
 					if (r != null)
 						resources.add(r);
 				} else {
@@ -188,12 +159,15 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 				}
 
 				switch (getFhirVersion(this.cliContext.getFhirVersion())) {
-					case "4.0.1": return new SimpleBundleProvider(
-						resources.stream().map(VersionConvertorFactory_40_50::convertResource).collect(Collectors.toList()));
-					case "4.3.0": return new SimpleBundleProvider(
-						resources.stream().map(VersionConvertorFactory_43_50::convertResource).collect(Collectors.toList()));
-					case "5.0.0": return new SimpleBundleProvider(
-						resources.stream().collect(Collectors.toList()));
+					case "4.0.1":
+						return new SimpleBundleProvider(
+							resources.stream().map(VersionConvertorFactory_40_50::convertResource).collect(Collectors.toList()));
+					case "4.3.0":
+						return new SimpleBundleProvider(
+							resources.stream().map(VersionConvertorFactory_43_50::convertResource).collect(Collectors.toList()));
+					case "5.0.0":
+						return new SimpleBundleProvider(
+							resources.stream().collect(Collectors.toList()));
 				}
 			}
 		}
@@ -282,7 +256,7 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 			R5 r5 = classR5.cast(theResource);
 			return r5;
 		}
-		log.error("FHIR version not supported for resource "+theResource.fhirType()+": "+theResource.getIdElement().getIdPart()+ " : "+ theResource.getStructureFhirVersionEnum());
+		log.error("FHIR version not supported for resource " + theResource.fhirType() + ": " + theResource.getIdElement().getIdPart() + " : " + theResource.getStructureFhirVersionEnum());
 		return null;
 	}
 
@@ -292,73 +266,75 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 			final byte[] resourceContentsBytes = MatchboxServerUtils.fetchBlobFromBinary(binary, myBinaryStorageSvc,
 																												  myCtx);
 			final String resourceContents = new String(resourceContentsBytes, StandardCharsets.UTF_8);
-            return switch (contents.getFhirVersion()) {
-                case R4 -> new org.hl7.fhir.r4.formats.JsonParser().parse(resourceContents);
-                case R4B -> new org.hl7.fhir.r4b.formats.JsonParser().parse(resourceContents);
-                case R5 -> new org.hl7.fhir.r5.formats.JsonParser().parse(resourceContents);
-                default -> {
-                    log.error("FHIR version not support for loading form matchbox case ");
-                    throw new RuntimeException(Msg.code(1305) + "Failed to load package resource " + contents);
-                }
-            };
+			return switch (contents.getFhirVersion()) {
+				case R4 -> new org.hl7.fhir.r4.formats.JsonParser().parse(resourceContents);
+				case R4B -> new org.hl7.fhir.r4b.formats.JsonParser().parse(resourceContents);
+				case R5 -> new org.hl7.fhir.r5.formats.JsonParser().parse(resourceContents);
+				default -> {
+					log.error("FHIR version not support for loading form matchbox case ");
+					throw new RuntimeException(Msg.code(1305) + "Failed to load package resource " + contents);
+				}
+			};
 		} catch (Exception e) {
 			throw new RuntimeException(Msg.code(1305) + "Failed to load package resource " + contents, e);
 		}
 	}
 
 	@Read(version = false)
-	public IBaseResource read(HttpServletRequest theServletRequest, @IdParam IIdType theId, RequestDetails theRequestDetails) {
+	public IBaseResource read(HttpServletRequest theServletRequest,
+									  @IdParam IIdType theId,
+									  RequestDetails theRequestDetails) {
 		try {
 			return new TransactionTemplate(myTxManager).execute(tx -> {
 
-				CliContext cliContext = new CliContext(this.cliContext);
-		
-				final int offset = 0;
-				final int count = 1;
-				Slice<NpmPackageVersionResourceEntity> outcome = null;
-				String pid = theId.getIdPart();
-				// check if pid is a long number
-				if (pid.matches("\\d+")) {
-					outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
-							resourceType,
-							Long.parseLong(pid));
-				}
-				if (outcome !=null && outcome.getSize() == 1) {
-					NpmPackageVersionResourceEntity res = outcome.toList().get(0);
-					IBaseResource resource = (IBaseResource) loadPackageEntityAdjustId(outcome.toList().get(0));
-					cliContext.setFhirVersion(getFhirVersion(resource));
-	
-					String url = "null";
-					if (classR4.isInstance(resource)) {
-						R4 r = classR4.cast(resource);
-						url = r.getUrl();
-					}
-					if (classR4B.isInstance(resource)) {
-						R4B r = classR4B.cast(resource);
-						url = r.getUrl();
-					}
-					if (classR5.isInstance(resource)) {
-						R5 r = classR5.cast(resource);
-						url = r.getUrl();
-					}
-			
-					// if is current we check if already loaded in a own engine and might be updated
-					// in the cache
-					if (res.getPackageVersion().isCurrentVersion() || cliContext.getOnlyOneEngine()) {
-						MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext,
-								false, false);
-						if (matchboxEngine != null) {
-							IBaseResource update = matchboxEngine.getCanonicalResource(url,getFhirVersion(resource));
-							if (update != null) {
-								return update;
-							}
-						}
-					}
-					return loadPackageEntityAdjustId(outcome.toList().get(0));
-				} else {
-					return matchboxEngineSupport.getCachedResource(resourceType, pid);
-				}
-			}
+																					 CliContext cliContext = new CliContext(this.cliContext);
+
+																					 final int offset = 0;
+																					 final int count = 1;
+																					 Slice<NpmPackageVersionResourceEntity> outcome = null;
+																					 String pid = theId.getIdPart();
+																					 // check if pid is a long number
+																					 if (pid.matches("\\d+")) {
+																						 outcome = myPackageVersionResourceDao.findByResourceTypeById(PageRequest.of(offset, count),
+																																										  resourceType,
+																																										  Long.parseLong(pid));
+																					 }
+																					 if (outcome != null && outcome.getSize() == 1) {
+																						 NpmPackageVersionResourceEntity res = outcome.toList().get(0);
+																						 IBaseResource resource = (IBaseResource) loadPackageEntityAdjustId(outcome.toList().get(0));
+																						 cliContext.setFhirVersion(getFhirVersion(resource));
+
+																						 String url = "null";
+																						 if (classR4.isInstance(resource)) {
+																							 R4 r = classR4.cast(resource);
+																							 url = r.getUrl();
+																						 }
+																						 if (classR4B.isInstance(resource)) {
+																							 R4B r = classR4B.cast(resource);
+																							 url = r.getUrl();
+																						 }
+																						 if (classR5.isInstance(resource)) {
+																							 R5 r = classR5.cast(resource);
+																							 url = r.getUrl();
+																						 }
+
+																						 // if is current we check if already loaded in a own engine and might be updated
+																						 // in the cache
+																						 if (res.getPackageVersion().isCurrentVersion() || cliContext.getOnlyOneEngine()) {
+																							 MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext,
+																																															 false, false);
+																							 if (matchboxEngine != null) {
+																								 IBaseResource update = matchboxEngine.getCanonicalResource(url, getFhirVersion(resource));
+																								 if (update != null) {
+																									 return update;
+																								 }
+																							 }
+																						 }
+																						 return loadPackageEntityAdjustId(outcome.toList().get(0));
+																					 } else {
+																						 return matchboxEngineSupport.getCachedResource(resourceType, pid);
+																					 }
+																				 }
 			);
 		} finally {
 		}
@@ -382,7 +358,10 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 	}
 
 	@Create()
-	public MethodOutcome create(HttpServletRequest theRequest, @ResourceParam IBaseResource theResource, @ConditionalUrlParam String theConditional, RequestDetails theRequestDetails) {
+	public MethodOutcome create(HttpServletRequest theRequest,
+										 @ResourceParam IBaseResource theResource,
+										 @ConditionalUrlParam String theConditional,
+										 RequestDetails theRequestDetails) {
 
 		String url = null;
 
@@ -402,21 +381,22 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 				R5 r = classR5.cast(theResource);
 				url = r.getUrl();
 			}
-		
+
 			if (url != null) {
 				MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext, true, false);
 				if (matchboxEngine == null) {
 					matchboxEngine = matchboxEngineSupport.getMatchboxEngine("default", cliContext, true, false);
 				}
 				if (matchboxEngine != null) {
-					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url, cliContext.getFhirVersion());
+					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url,
+																																cliContext.getFhirVersion());
 					if (existing != null) {
 						theResource.setId(existing.getId());
 						matchboxEngine.dropResource(resourceType, existing.getId());
 					} else {
 						if (theResource.getIdElement().isEmpty()) {
 							theResource.setId(url.substring(url.lastIndexOf("/") + 1));
-						}  else {
+						} else {
 							theResource.setId(theResource.getIdElement().getIdPart());
 						}
 					}
@@ -443,13 +423,17 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 			}
 			throw new ResourceNotFoundException("matchbox engine not found for url " + url + " and fhir version " + cliContext.getFhirVersion());
 		} else {
-			throw new MethodNotAllowedException("Creating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
+			throw new MethodNotAllowedException(
+				"Creating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
 		}
 	}
 
 	@Update
-	public MethodOutcome update(HttpServletRequest theRequest,  @ResourceParam IDomainResource theResource,  @IdParam IIdType theId,
-		@ConditionalUrlParam String theConditional, RequestDetails theRequestDetails) {
+	public MethodOutcome update(HttpServletRequest theRequest,
+										 @ResourceParam IDomainResource theResource,
+										 @IdParam IIdType theId,
+										 @ConditionalUrlParam String theConditional,
+										 RequestDetails theRequestDetails) {
 
 		String url = null;
 		CliContext cliContext = new CliContext(this.cliContext);
@@ -471,20 +455,21 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 				url = r.getUrl();
 			}
 
-			if (url!=null) {
+			if (url != null) {
 				MatchboxEngine matchboxEngine = matchboxEngineSupport.getMatchboxEngine(url, cliContext, true, false);
 				if (matchboxEngine == null) {
 					matchboxEngine = matchboxEngineSupport.getMatchboxEngine("default", cliContext, true, false);
 				}
 				if (matchboxEngine != null) {
-					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url, cliContext.getFhirVersion());
+					IDomainResource existing = (IDomainResource) matchboxEngine.getCanonicalResource(url,
+																																cliContext.getFhirVersion());
 					if (existing != null) {
 						theResource.setId(existing.getId());
 						matchboxEngine.dropResource(resourceType, existing.getId());
 					} else {
 						if (theResource.getIdElement().isEmpty()) {
 							theResource.setId(url.substring(url.lastIndexOf("/") + 1));
-						}  else {
+						} else {
 							theResource.setId(theResource.getIdElement().getIdPart());
 						}
 					}
@@ -508,7 +493,8 @@ public class ConformancePackageResourceProvider<R4 extends MetadataResource, R4B
 			}
 			throw new ResourceNotFoundException("matchbox engine not found for url " + url + " and fhir version " + cliContext.getFhirVersion());
 		} else {
-			throw new MethodNotAllowedException("Updating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
+			throw new MethodNotAllowedException(
+				"Updating conformance resources is only allowed in development mode, set matchbox.fhir.context.onlyOneEngine=true in application.yaml");
 		}
 	}
 
